refactor: correct spelling, grammar errors

--- a/projects/calculator-app/index.html
+++ b/projects/calculator-app/index.html
@@ -58,7 +58,7 @@
                     </h1>
                     <article class="project-description-container">
                         <p class="section-text project-description">
-                            This application allows users to perform simple mathematical calculations. Supported operations include - addition, subtraction, multiplication and division. Users can perform calculations on decimal numbers. Aditionally, users can reset the calculations or delete until the previous operand. As a design feature, users can toggle between light and dark modes as well.
+                            This application allows users to perform simple mathematical calculations with the following supported operations - addition, subtraction, multiplication, and division. Users can perform calculations on decimal numbers as well. Additionally, users can reset the calculations or delete the previous operand. As a design feature, users can toggle between light and dark modes as well.
                         </p>
                         <div class="project-image">
                             <img src="../images/calculator-app.PNG" alt="">
@@ -98,8 +98,12 @@
                                 Project Challenges
                             </h2>
                             <ul class="section-text">
-                                <li>Adding the functionality of deletion was  a real challenge. I looked at various calculators to figure out if the delete function would delete all the operands and operators or only the operands. Finally, I followed the delete feature in a windows calculator, and went ahead to delete only operands.</li>
-                                <li>Another challenge was when I had to replace a previous operator with a new one.</li>
+                                <li>
+                                    Adding the functionality of deletion was a real challenge. I looked at various calculators to figure if the delete function would delete all the operands and operators or only the operands. Finally, I followed the delete feature in a windows calculator and went ahead to delete only operands.
+                                </li>
+                                <li>
+                                    Another challenge was when I had to replace a previous operator with a new one.
+                                </li>
                             </ul>
                         </div>
                         <!-- <div class="project-future">
