--- a/projects/play-with-triangles/index.html
+++ b/projects/play-with-triangles/index.html
@@ -58,22 +58,22 @@
                     </h1>
                     <article class="project-description-container">
                         <p class="section-text project-description">
-                            This application allows users to test their knowledge on triangles, areas, properties, and their types. Users have the following mneu options - 
+                            This application allows users to test their knowledge of triangles, areas, properties, and types. Users have the following menu options - 
                             <ol class="triangles-menu-options">
                                 <li>
-                                    To enter the 3 angles of a triangle, and check if they form a valid triangle. 
+                                    To enter the 3 angles of a triangle and check if they form a valid triangle. 
                                 </li>
                                 <li>
-                                    To enter base and height of a right angled triangle and find the hypotenuse.
+                                    To enter the base and height of a right-angled triangle and find the hypotenuse.
                                 </li>
                                 <li>
-                                    To enter base and height of a triangle, and find it's area.
+                                    To enter the base and height of a triangle and find its area.
                                 </li>
                                 <li>
-                                    Given 2 angles of a triangle, user has to find the 3rd angle.
+                                    Given the 2 angles of a triangle, the user has to find the 3rd angle.
                                 </li>
                                 <li>
-                                    A 10 question quiz on triangle, and it's types.
+                                    A short quiz on triangles and their types.
                                 </li>
                             </ol>
 
@@ -116,8 +116,12 @@
                                 Project Challenges
                             </h2>
                             <ul class="section-text">
-                                <li>One major challenege I faced was handling states for the user's answers to questions.</li>
-                                <li>Another challenge was adding styles to specific questions that user answered incorrectly or answered correctly. Since DOM selectors could not be used, I realized this could be solved by styling elements using classes.</li>
+                                <li>
+                                    One major challenge I faced was handling states for the user's answers to questions.
+                                </li>
+                                <li>
+                                    Another challenge was adding styles to specific questions that users answered incorrectly or answered correctly. Since DOM selectors couldn't be used, I realized this could be solved by styling elements using classes.
+                                </li>
                             </ul>
                         </div>
                         <!-- <div class="project-future">
