--- a/projects/todo-list/index.html
+++ b/projects/todo-list/index.html
@@ -57,7 +57,8 @@
                         </strong>
                     </h1>
                     <article class="project-description-container">
-                        <p class="section-text project-description">My todo list allows users to add, edit, delete and set tasks for the day. Additionaly users can also choose to complete the tasks by clicking the <i class="fas fa-check-circle"></i> icon. As a design feature, users can toggle between light and dark modes as well. Other functionality includes- filtering, and clearing tasks from the list. The todo lists are stored in the local storage, so that users don't lose out on their tasks and progress!</p>
+                        <p class="section-text project-description">
+                            My to-do list allows users to add, edit, delete and set tasks for the day. Additionally, users can also choose to complete the tasks by clicking the <i class="fas fa-check-circle"></i> icon. As a design feature, users can toggle between light and dark modes as well. Other functionality includes- filtering and clearing to-dos from the list. The to-do list items are stored so that users don't lose out on their tasks and progress!</p>
                         <div class="project-image">
                             <img src="../images/todp-app.PNG" alt="">
                         </div>
@@ -88,7 +89,7 @@
                                 Project Learnings
                             </h2>
                             <p class="section-text">
-                                The major takeaway from this project was <strong>splitting the problems into sub-problems </strong>, and then building a complete, working todo list from all the components. Event delegation was another concept I got to learn and use in this project. Managing, adding, clearing local storage was a learning.
+                                The major takeaway from this project was <strong>splitting the problems into sub-problems</strong>. And using the subproblems to build a complete, working to-do list from all the components. Event delegation was another concept I got to learn and use in this project. Managing, adding, clearing local storage was learning.
                             </p>
                         </div>
                         <div class="project-challenges">
@@ -100,9 +101,9 @@
                                     Designing the overall application was incredibly challenging. Taking into account responsiveness across all devices was one of the major goals for this project.
                                 </li>
                                 <li>
-                                    Editing a previously added todo item was another challenge. More so, to change the same todo item from the local storage as well.
+                                    Editing a previously added to-do item was another challenge. More so, to change the same to-do item from the local storage as well.
                                 </li>
-                            </>
+                            </ul>
                         </div>
                         <!-- <div class="project-future">
                             <h2 class="lead-text">
