--- a/projects/weather-app/index.html
+++ b/projects/weather-app/index.html
@@ -58,8 +58,8 @@
                     </h1>
                     <article class="project-description-container">
                         <p class="section-text project-description">
-                            This application allows users to search for a city name, and check the weather forecast. This project uses the <a href="https://www.metaweather.com/">metaweather API</a> to first search for the location id- called <strong>where on earth (woeid) id</strong>. If the city is recognized by the API, it returns the woeid, which is then used to make a second call to the same API, and fetch real time weather. The application shows the current forecast, and also for the next 5 days.
-                            Additionaly, this app also allows users to view data in either degree Farenheit or degree Celcius units.
+                            This application allows users to search for a city name, and check the weather forecast. This project uses the <a href="https://www.metaweather.com/">metaweather API</a> to first search for the location id- called <strong>where on earth (woeid) id</strong>. If the city is recognized by the API, it returns the woeid, which is then used to make a second call to the same API, and fetch real-time weather. The application shows the current forecast, and also for the next 5 days.
+                            Additionally, this app also allows users to view data in either degree Fahrenheit or degree Celcius units.
                         </p>
                         <div class="project-image">
                             <img src="../images/weather-app.PNG" alt="">
@@ -91,7 +91,7 @@
                                 Project Learnings
                             </h2>
                             <p class="section-text">
-                                My key takeaway was developing an understanding of React components, maintaining multiple states, and hooks. Being my first large react project, I learnt about organizing, and structuring files in a react project. I also got an opportunity understand how fetching data works in react.
+                                My key takeaway was developing an understanding of React components, maintaining multiple states and hooks. Being my first large react project, I learned about organizing and structuring files in a react project. I also got an opportunity to understand how fetching data works in React.
                             </p>
                         </div>
                         <div class="project-challenges">
@@ -99,17 +99,19 @@
                                 Project Challenges
                             </h2>
                             <ul class="section-text">
-                                <li>Figuring the number of components, and states that were required for the application.</li>
                                 <li>
-                                    Fecthing data in a react application was a major challenge. The next challenge was immediately fetching weather data when location id was available.
+                                    Figuring the number of components and states that were required for the application was a major challenge.
                                 </li>
                                 <li>
-                                    Updating a child component whenever the state of parent component changed.
+                                    Fetching data in a React application was another challenge. The next challenge was immediately fetching weather data when location id was available.
                                 </li>
                                 <li>
-                                    A final challenge was deciding upon which values were needed to be passed on as props from a parent to a child component.
+                                    Updating a child component whenever the state of parent component was changed.
                                 </li>
-                            </>
+                                <li>
+                                    A final challenge was deciding which values were to be passed as props from a parent to a child component.
+                                </li>
+                            </ul>
                         </div>
                         <!-- <div class="project-future">
                             <h2 class="lead-text">
