--- a/blogs/index.html
+++ b/blogs/index.html
@@ -7,7 +7,7 @@
 
         <link rel="stylesheet" href="./css/styles.css">
         <link rel="stylesheet" href="../css/styles.css">
-        <title>Blogs | Bharati Subramanian</title>
+        <title>Blogs | Bharati</title>
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
