--- a/index.html
+++ b/index.html
@@ -70,13 +70,14 @@
                         <p class="section-lead lead-text">Front-End Developer</p>
                         <img src="./images/bharati.jpg" alt="Picture of Bharati smiling" class="section-image">
                         <p class="section-text">
-                            I am an aspiring Fullstack Web Developer, currently exploring and building applications with HTML, CSS, JavaScript, and ReactJS. 
-                            <br/><br/>
-                            I also enjoy problem solving, and have invested a good amount of time to strenghten my ability in the domain. I've explored techniques to choose the best possible data strcutures and apply algorithms for solving problems on coding platforms such as LeetCode.
-                            <br />
-                            I enjoy web designing, and would love to study and gain experience in UI/UX designing as well. 
-                            <br /><br />
-                            Aprt from tech, you will see me reading books, singing, or drinking coffee and tea!
+                            I'm a Computer Applications graduate working as an Associate Analyst at Deloitte. <br />
+                            I aspire to become a full-stack developer and am currently exploring and building applications using HTML, CSS, JavaScript, and ReactJS.
+                            <br/><br />
+
+                            I also enjoy problem-solving and have invested quite some time to strengthen my ability in the domain. I've explored techniques to choose the best possible data structures and apply algorithms for solving problems on coding platforms such as LeetCode.
+                            I enjoy web designing and would love to learn and gain experience in UI/UX designing too.
+                            <br/><br />
+                            Apart from tech, you will see me reading books, singing, or drinking coffee and tea!
                         </p>
                     </article>
                 </section>
@@ -173,10 +174,9 @@
                         </div>
                         <div class="flex-item text-content">
                             <p class="section-text">
-                                I love to build and develop challenging, new applications. I believe the best means to become better at programming is by developing applications that translates theory into something live and working. In addition, this practice also adds to confidence, increased code quality and encourages documenting your journey.
+                                I love to build and develop challenging, new applications. The best means to become better at programming is by developing applications that translate theory into something live and working. In addition, this practice also adds to confidence, enhances code quality, and encourages documenting your journey.
                                 <br /><br />
-                                I'm currently improving my HTML, CSS, JavaScript, and ReactJS skills by developing front-end applications. 
-                                
+                                I'm currently improving my HTML, CSS, JavaScript, and ReactJS skills by developing front-end applications.
                             </p>
                             <div class="buttons-container flex-container justify-center align-start project-buttons">
                                 <a href="./projects/" class="btn btn-primary">My Projects</a>
@@ -193,10 +193,9 @@
                         </div>
                         <div class="flex-item text-content">
                             <p class="section-text">
-                                I also try to document my journey and learnings through blog posts. I often try to write blog posts on topics that I find difficult to grasp. The writing process gives a wonderful opportunity to work on my presentation skills and filter content to highlight only the important concepts.
-                                <br /> <br />
-                                Blog writing I feel is the classic way of "learning by teaching". The abundance of research behind a blog post adds on to a tremendous amount of knowledge and learning how to convert thoughts, theory, and knowledge into describable words. 
-                                
+                                I also try to document my journey and learnings through blog posts. I often try to write blog posts on topics that I find difficult to grasp. The writing process allows me to work on my presentation skills and filter content to highlight only the relevant concepts.
+                                <br /><br />
+                                Blog writing, I feel, is the classic case of "learning by teaching"! The abundance of research behind a blog post adds to a tremendous amount of knowledge and learning how to convert thoughts, theory, and knowledge into describable words.
                             </p>
                             <div class="buttons-container flex-container justify-center align-start project-buttons">
                                 <a href="./blogs/" class="btn btn-primary">My Blog Posts</a>
