refactor: edit projects page title

--- a/projects/index.html
+++ b/projects/index.html
@@ -7,7 +7,7 @@
 
         <link rel="stylesheet" href="./css/styles.css">
         <link rel="stylesheet" href="../css/styles.css">
-        <title>Bharati Subramanian | Projects</title>
+        <title>Projects | Bharati</title>
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
