refactor: added section comments

--- a/index.html
+++ b/index.html
@@ -17,12 +17,16 @@
     </head>
     <body class="light-theme">
         <div id="body-wrapper">
+            <!-- HEADER -->
             <header class="header container">
+                <!-- NAVBAR -->
                 <nav class="navbar flex-container flex-row justify-space-between align-center">
+                    <!-- LOGO -->
                     <a  href="/" class="logo-link"><h1 class="logo flex-container flex-row justify-center align-center">BS</h1></a>
                     <button class="display-none navlinks-toggle">
                         <span class="hamburger"></span>
                     </button>
+                    <!-- NAVLINKS -->
                     <ul class="navlinks flex-container flex-row justify-center align-center">
                         <li>
                             <a href="/" class="active-link navlink">Home</a>
@@ -37,6 +41,7 @@
                             <a href="./blogs/" class="navlink">Blogs</a>
                         </li>
                     </ul>
+                    <!-- THEME TOGGLE -->
                     <label class="theme-toggler" for="theme-checkbox">
                         <input type="checkbox" name="theme-checkbox" id="theme-checkbox">
                         <h1 class="theme-toggle flex-container flex-row justify-center align-center">
@@ -45,6 +50,7 @@
                         </h1>
                     </label>
                 </nav>
+                <!-- SHOWCASE -->
                 <section class="showcase flex-container justify-center align-center flex-column">
                     <img src="./images/bharati1.jpg" alt="Picture of Bharati Smiling with palm on her cheek" class="hero-image">  
                     <article class="text-content flex-container flex-column align-start justify-center">
@@ -63,6 +69,7 @@
                 </section>
             </header>
             <main class="main">
+                <!-- ABOUT -->
                 <section class="about container flex-container flex-column align-center justify-center" id="about">
                     <article class="about-container">
                         <h2 class="section-head">About me</h2>
@@ -80,6 +87,7 @@
                         </p>
                     </article>
                 </section>
+                <!-- SKILLS -->
                 <section id="skills" class="skills container flex-container flex-column align-center justify-center">
                     <h2 class="section-head">Skills</h2>
                     <article class="skills-container  flex-container justify-center align-center">
@@ -165,6 +173,7 @@
                     </article>
                     <p class="skills-others section-text">A few other notable technologies I have worked with are: <span title="Systems, Applications & Products in Data Processing">SAP</span>, <span>C</span>, <span>C++</span>, <span>C# and ASP.NET</span>, <span>JSP and Servlets</span>, <span>PHP</span>, <span>Azure ML</span>. My work with these technologies have been limited, and I am still a beginner. But I look forward to work in length with them in the future.</p>
                 </section>
+                <!-- PROJECTS -->
                 <section class="projects container" id="projects">
                     <h2 class="section-head">Projects</h2>  
                     <article class="content flex-container flex-row-reverse align-center justify-center">
@@ -184,6 +193,7 @@
                         </div>
                     </article>                      
                 </section>
+                <!-- BLOGS -->
                 <section class="blogs container" id="blogs">
                     <h2 class="section-head">Blogs</h2>  
                     <article class="content flex-container flex-row align-center justify-center">
@@ -205,6 +215,7 @@
                 </section>
             </main>
         </div>
+        <!-- FOOTER -->
         <footer class="footer container" id="footer">
             <div class="footer-container flex-container justify-space-between flex-row align-center">
                 <p class="flex-item author">
