refactor: links to open in new tab
Added URL for resume as well

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                             I build responsive, scalable, and user-friendly apps.
                         </p>
                         <div class="buttons-container showcase-buttons flex-container align-center justify-center">
-                            <a href="#" class="btn btn-primary">Download Resume</a>
+                            <a href="https://drive.google.com/file/d/1UPdKajUMBTQ9i3U_ZsOSLI7NAr2SpELe/view?usp=sharing" target="_blank" class="btn btn-primary">Download Resume</a>
                             <a href="#about" class="btn btn-secondary">About Me</a>
                         </div>
                     </article>
@@ -188,7 +188,7 @@
                             </p>
                             <div class="buttons-container flex-container justify-center align-start project-buttons">
                                 <a href="./projects/" class="btn btn-primary">My Projects</a>
-                                <a href="https://www.github.com/bharati-21" class="btn btn-secondary">Browse GitHub <i class="fab fa-github"></i></a>
+                                <a href="https://www.github.com/bharati-21" target="_blank" class="btn btn-secondary">Browse GitHub <i class="fab fa-github"></i></a>
                             </div>
                         </div>
                     </article>                      
@@ -208,7 +208,7 @@
                             </p>
                             <div class="buttons-container flex-container justify-center align-start project-buttons">
                                 <a href="./blogs/" class="btn btn-primary">My Blog Posts</a>
-                                <a href="https://dev.to/bharati21" class="btn btn-secondary">Browse Dev <i class="fab fa-dev"></i></a>
+                                <a href="https://dev.to/bharati21" target="_blank" class="btn btn-secondary">Browse Dev <i class="fab fa-dev"></i></a>
                             </div>
                         </div>
                     </article>                      
